# sign-stamp

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  stamp_pdf.py
